# ai-engineer-training

week04-homework/: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  demo_unified_system.py  pyproject.toml  test_agent.py
week04-homework/smart_customer_service/: agent.py  config.py  main.py  plugin_loader.py  server.py
week04-homework/smart_customer_service/plugins/: invoice_plugin.py
week04-homework/tests/: test_invoice_plugin.py  test_plugin_loader.py  test_server.py
